upgraded unit tests and integration tests to match new implementations