@@ -2,7 +2,6 @@ package com.abada.engine.core;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
@@ -16,15 +15,21 @@ public class TaskManagerTest {
         TaskManager taskManager = new TaskManager();
         String processInstanceId = UUID.randomUUID().toString();
 
-        taskManager.createTask("approveTask", "Approve Request", processInstanceId, null, Arrays.asList("user1"), Arrays.asList("group1"));
+        taskManager.createTask(
+                "approveTask", "Approve Request", processInstanceId,
+                null,
+                List.of("user1"),
+                List.of("group1")
+        );
 
-        List<TaskInstance> visibleTasks = taskManager.getVisibleTasksForUser("user1", Arrays.asList("group1"));
+        List<TaskInstance> visibleTasks = taskManager.getVisibleTasksForUser("user1", List.of("group1"));
         assertThat(visibleTasks).hasSize(1);
 
         TaskInstance task = visibleTasks.get(0);
         assertThat(task.getTaskDefinitionKey()).isEqualTo("approveTask");
         assertThat(task.getProcessInstanceId()).isEqualTo(processInstanceId);
         assertThat(task.getAssignee()).isNull();
+        assertThat(task.isCompleted()).isFalse();
     }
 
     @Test
@@ -32,13 +37,23 @@ public class TaskManagerTest {
         TaskManager taskManager = new TaskManager();
         String processInstanceId = UUID.randomUUID().toString();
 
-        taskManager.createTask("reviewTask", "Review Document", processInstanceId, null, Arrays.asList("user2"), Arrays.asList("group2"));
+        taskManager.createTask(
+                "reviewTask", "Review Document", processInstanceId,
+                null,
+                List.of("user2"),
+                List.of("group2")
+        );
 
-        TaskInstance task = taskManager.getVisibleTasksForUser("user2", Arrays.asList("group2")).get(0);
-        boolean claimed = taskManager.claimTask(task.getId(), "user2", Arrays.asList("group2"));
+        List<TaskInstance> visible = taskManager.getVisibleTasksForUser("user2", List.of("group2"));
+        assertThat(visible).hasSize(1);
+
+        TaskInstance task = visible.get(0);
+
+        boolean claimed = taskManager.claimTask(task.getId(), "user2", List.of("group2"));
 
         assertThat(claimed).isTrue();
         assertThat(task.getAssignee()).isEqualTo("user2");
+        assertThat(task.isCompleted()).isFalse();
     }
 
     @Test
@@ -46,15 +61,26 @@ public class TaskManagerTest {
         TaskManager taskManager = new TaskManager();
         String processInstanceId = UUID.randomUUID().toString();
 
-        taskManager.createTask("reviewTask", "Review Document", processInstanceId, "user3", null, null);
+        taskManager.createTask(
+                "signOffTask", "Final Sign Off", processInstanceId,
+                "user3", // already assigned
+                null,
+                null
+        );
 
-        TaskInstance task = taskManager.getVisibleTasksForUser("user3", Arrays.asList("group3")).get(0);
-        boolean canComplete = taskManager.canComplete(task.getId(), "user3", Arrays.asList("group3"));
 
+        TaskInstance task = taskManager.getTaskByDefinitionKey("signOffTask", processInstanceId).orElseThrow();
+
+        assertThat(task.getAssignee()).isEqualTo("user3");
+
+        boolean canComplete = taskManager.canComplete(task.getId(), "user3", List.of("group3"));
         assertThat(canComplete).isTrue();
-
         taskManager.completeTask(task.getId());
         assertThat(task.isCompleted()).isTrue();
+
+        // Once completed, it should no longer be visible
+        List<TaskInstance> postCompleteVisible = taskManager.getVisibleTasksForUser("user3", List.of("group3"));
+        assertThat(postCompleteVisible).isEmpty();
     }
 
     @Test
@@ -62,10 +88,16 @@ public class TaskManagerTest {
         TaskManager taskManager = new TaskManager();
         String processInstanceId = UUID.randomUUID().toString();
 
-        taskManager.createTask("validateInvoice", "Validate Invoice", processInstanceId, null, Arrays.asList("user4"), Arrays.asList("group4"));
+        taskManager.createTask(
+                "validateInvoice", "Validate Invoice", processInstanceId,
+                null,
+                List.of("user4"),
+                List.of("group4")
+        );
 
-        Optional<TaskInstance> retrievedTask = taskManager.getTaskByDefinitionKey("validateInvoice", processInstanceId);
-        assertThat(retrievedTask).isPresent();
-        assertThat(retrievedTask.get().getName()).isEqualTo("Validate Invoice");
+        Optional<TaskInstance> retrieved = taskManager.getTaskByDefinitionKey("validateInvoice", processInstanceId);
+        assertThat(retrieved).isPresent();
+        assertThat(retrieved.get().getName()).isEqualTo("Validate Invoice");
+        assertThat(retrieved.get().isCompleted()).isFalse();
     }
 }
